Fix crash on new vector layer after session switch.

BUG:515166


(cherry picked from commit 7cae000090e667c2b93668f897f1c16b646e41cb)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>